# data_visual

./: .gitignore  __main__.py  pyproject.toml
data_visual/: attractor.py  edge_interaction.py  force_emitter.py  graph.py  graph_artist.py  main.py  node.py  node_interaction.py  physical_node.py  physical_object.py  repeller.py  rubberband.py  setting.py  simulator.py  vec2.py
data_visual/fr/: builder.py  common.py  node.py  repeller.py  rubberband.py
tests/: test_attractor.py  test_data_visual.py  test_physical_object.py  test_repeller.py  test_rubberband.py  test_vec2.py
