[tool.poetry]
name = "data_visual"
version = "0.1.0"
description = ""
authors = ["hhsdev <heinhtetsoe.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
bitarray = "^1.0"
networkx = "^2.4"
pillow = "^6.2"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
